@@ -78,7 +78,9 @@ edge nearpoints centroid, p \- base, q \- dual; o \- origin point
 tangent sphere, u \- minimum, U \- maximum
 incircles, s \- base, t \- dual; as rings, S \- base, T \- dual
 .HP
-\fB\-q\fR <dist> offset for incircles to avoid coplanarity e.g 0.0001 (default: 0)
+\fB\-q\fR <dist> incircles offset to avoid coplanarity e.g 0.0001 (default: 0)
+.HP
+\fB\-Q\fR <dist> incircles radius adjustment (default: 1)
 .TP
 \fB\-g\fR <opt>
 roundness of tangent sphere, positive integer n (default: 8)
